feat: relátorio de estoque consolidado